# libyasvg

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  color.cpp  color.h  main.cpp  svg2cairo.cpp  svg2cairo.h
